welcome.lessons.welcome.array.island.Island.scala.error
island:26: error: not found: value num
var M:Int = maxValue(num);
                     ^island:29: error: not found: value num
		compteur=compteur + seqInArray(num,M-i)
                                               ^island:30: error: not found: value num
		for (j<-0 to num.length) {
                             ^